--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "16.1.3",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-calendly": "^4.4.0",
+    "react-dom": "19.2.3",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
